Adding data sets, misc cleanup